# slightx

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  COPYING  LICENSE.txt  Makefile  README  TODO
apps/: Makefile  posix-test.c
boot/: Makefile  menu.lst  stage2
boot/sxloader/: Makefile
boot/sxloader/stage1/: Makefile  stage1.asm
boot/sxloader/stage2/: Makefile
config/: CMakeLists.txt  boot.conf  limine.conf
doc/: Doxyfile  Programming.txt  links.txt  slightx.blend
doc/logo/: splashscreen.xcf
kernel/: Makefile  array.c  cpu.c  gdt.c  idt.c  int.asm  interrupts.c  ints.asm  isr.c  linker.ld  loader.asm  main.c  mem.c  process.asm  screen.c  task.c  timer.c  util.c
kernel/fs/: fs.c  initrd.c
kernel/include/: array.h  cpu.h  interrupts.h  isr.h  mem.h  multiboot.h  screen.h  stdarg.h  task.h  timer.h  types.h  util.h
kernel/include/asm/: asm.h
kernel/include/fs/: fs.h  initrd.h
kernel/include/mem/: gdt.h  idt.h  kheap.h  paging.h  tss.h
kernel/include/sys/: io.h  syscall.h
kernel/mem/: gdt.c  idt.c  kheap.c  paging.c
kernel/sys/: io.c  pic.c  syscall.c
libc/: Makefile
sources/apps/dummy/: CMakeLists.txt  dummy.asm
sources/apps/dummy/src/: main.c
sources/kernel/: CMakeLists.txt
sources/kernel/include/kernel/: args.h  halt.h  panic.h
sources/kernel/include/kernel/boot/: acpi.h  exc.h  gdt.h  idt.h  int.h  irq.h  isr.h  lapic.h  madt.h  pic.h  tss.h
sources/kernel/include/kernel/chrono/: time.h
sources/kernel/include/kernel/cpu/: cpuid.h  ioport.h  mp.h  msr.h  percpu.h
sources/kernel/include/kernel/drivers/: console.h  initrd.h  serial.h
sources/kernel/include/kernel/fs/: vfs.h
sources/kernel/include/kernel/mem/: addr.h  heap.h  hhdm.h  pmm.h  scratch.h  vmm.h
sources/kernel/include/kernel/proc/: abi.h  capabilities.h  scheduler.h  spawn.h  syscall.h  task.h  thread.h
sources/kernel/include/kernel/proc/capabilities/: console.h
sources/kernel/include/kernel/proc/scheduler/: controller.h  runqueue.h  sleeperlist.h
sources/kernel/include/kernel/vfs/: _decls.h  dirent.h  error.h  file-ops.h  file.h  main.h  mount.h  node-ops.h  node.h  stat.h
sources/kernel/src/: args.c  halt.c  main.c  panic.c
sources/kernel/src/boot/: acpi.c  exc.c  gdt.c  idt.c  irq.c  isr-stubs.asm  isr.c  lapic.c  madt.c  pic.c  tss.c
sources/kernel/src/chrono/: time.c
sources/kernel/src/cpu/: cpuid.c  ioport.c  mp.c  msr.c  percpu.c
sources/kernel/src/drivers/: console.c  initrd.c  serial.c
sources/kernel/src/fs/: vfs.c
sources/kernel/src/mem/: heap.c  hhdm.c  pmm.c  scratch.c  vmm.c
sources/kernel/src/proc/: capabilities.c  scheduler.c  spawn.c  syscall-stub.asm  syscall.c  task-switch.asm  task-trampoline.asm  task.c  thread.c
sources/kernel/src/proc/capabilities/: console.c
sources/kernel/src/proc/scheduler/: controller.c  runqueue.c  sleeperlist.c
sources/kernel/src/vfs/: error.c  main.c  mount.c  mtable.c  mtable.h  node.c  path.c  path.h
sources/kernel/src/vfs/ops/: chmod.c  chown.c  close.c  create.c  flush.c  ioctl.c  link.c  lookup.c  open.c  read.c  readdir.c  readlink.c  rename.c  seek.c  stat.c  symlink.c  truncate.c  unlink.c  write.c
sources/klibc/: CMakeLists.txt
sources/klibc/include/klibc/: assert.h  types.h
sources/klibc/include/klibc/algo/: conv.h  format.h
sources/klibc/include/klibc/archive/: ustar.h
sources/klibc/include/klibc/chrono/: timer.h
sources/klibc/include/klibc/collections/: bitmap.h
sources/klibc/include/klibc/io/: log.h
sources/klibc/include/klibc/mem/: align.h  alloc.h  arena.h  bytes.h  span.h  str.h
sources/klibc/include/klibc/sync/: condvar.h  lock.h  mutex.h  semaphore.h  waiter.h  waitqueue.h
sources/klibc/src/: ubsan.c
sources/klibc/src/algo/: conv.c  format.c
sources/klibc/src/archive/: ustar.c
sources/klibc/src/chrono/: timer.c
sources/klibc/src/collections/: bitmap.c
sources/klibc/src/io/: log.c
sources/klibc/src/mem/: align.c  alloc.c  arena.c  bytes.c  span.c  str.c
sources/klibc/src/sync/: condvar.c  lock.c  mutex.c  semaphore.c  waitqueue.c
sources/libs/vfs/: CMakeLists.txt
sources/libs/vfs/include/vfs/: mesages.h  path.h  types.h
sources/libs/vfs/src/: path.c
sources/ulibc/: CMakeLists.txt
sources/ulibc/include/slightx/: assert.h  io.h  os.h  types.h
sources/ulibc/include/slightx/algo/: conv.h  format.h
sources/ulibc/include/slightx/mem/: align.h  alloc.h  arena.h  bytes.h  scratch.h  span.h  str.h
sources/ulibc/include/slightx/sys/: abi.h  cap.h  io.h  mem.h  proc.h
sources/ulibc/src/: crt.c  io.c  ubsan.c
sources/ulibc/src/algo/: conv.c  format.c
sources/ulibc/src/mem/: align.c  alloc.c  arena.c  bytes.c  scratch.c  span.c  str.c
sources/ulibc/src/sys/: cap.c  def.h  io.c  mem.c  proc.c
toolchain/: kernel.linker.ld  session.gdb  userland.linker.ld
